...
    
    func showNextQuestionOrResults()
    {
        if self.isLastQuestion()
        {
            statisticService?.store(correct: correctAnswers, total: self.questionsAmount)
            let results = QuizResultsViewModel(title: "Этот раунд окончен!", text: makeResultsMessage(), buttonText: "Сыграть ещё раз")
            viewController?.show(quiz: results)
        }
        else
        {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
